tests/neg/parser-stability-2.scala
trait x0 {
new _  // error
